@@ -62,7 +62,7 @@ More details can be found on the gt68xx backend homepage
 .IR http://www.meier-geinitz.de/sane/gt68xx/ .
 .PP
 The Artec E+ 48U and its clones are supported by the artec_eplus48u backend, see
-.BR sane-artec_eplus48u (5)
+.BR sane\-artec_eplus48u (5)
 for details.
 .PP
 This is BETA software. Especially if you test new or untested scanners, keep
@@ -81,7 +81,7 @@ the models mentioned above, please let me know.
 If libusb-0.1.6 or later is installed, this section can be skipped. The
 scanner should be found by sane-find-scanner without further actions. For
 setting permissions and general USB information looks at
-.BR sane-usb (5).
+.BR sane\-usb (5).
 .PP
 The scanners based on the GT-6816 (Mustek BearPaw TA and BearPaw Plus models,
 the Packard Bell and the Lexmark scanner) need a Linux kernel 2.4.12 or newer.
@@ -236,13 +236,13 @@ export SANE_DEBUG_GT68XX=4
 
 .SH "SEE ALSO"
 .BR sane (7),
-.BR sane-usb (5),
-.BR sane-artec_eplus48u (5)
-.BR sane-plustek (5),
-.BR sane-ma1509 (5),
-.BR sane-mustek_usb (5),
-.BR sane-mustek (5),
-.BR sane-mustek_pp (5)
+.BR sane\-usb (5),
+.BR sane\-artec_eplus48u (5)
+.BR sane\-plustek (5),
+.BR sane\-ma1509 (5),
+.BR sane\-mustek_usb (5),
+.BR sane\-mustek (5),
+.BR sane\-mustek_pp (5)
 .br
 .I @DOCDIR@/gt68xx/gt68xx.CHANGES
 .br
